Adding a flight profile for a F9 SSTO (almost works) Refactoring how engine shutdown works to allow for shutting down individual engines Moving the falcon heavy into its own folder

--- a/src/SpaceSim/SpaceSim.csproj
+++ b/src/SpaceSim/SpaceSim.csproj
@@ -130,9 +130,10 @@
     <Compile Include="Spacecrafts\DemoSat.cs" />
     <Compile Include="Spacecrafts\Dragon.cs" />
     <Compile Include="Spacecrafts\DragonTrunk.cs" />
-    <Compile Include="Spacecrafts\FH9S1.cs" />
-    <Compile Include="Spacecrafts\FH9S2.cs" />
-    <Compile Include="Spacecrafts\FHBooster.cs" />
+    <Compile Include="Spacecrafts\Falcon9\F9S1.cs" />
+    <Compile Include="Spacecrafts\FalconHeavy\FHS1.cs" />
+    <Compile Include="Spacecrafts\FalconHeavy\FHS2.cs" />
+    <Compile Include="Spacecrafts\FalconHeavy\FHBooster.cs" />
     <Compile Include="Spacecrafts\ISpaceCraft.cs" />
     <Compile Include="Spacecrafts\SpaceCraftBase.cs" />
     <Compile Include="Spacecrafts\SpacecraftFactory.cs" />
