--- a/src/SpaceSim/SpaceSim.csproj
+++ b/src/SpaceSim/SpaceSim.csproj
@@ -65,7 +65,9 @@
     </ApplicationDefinition>
     <Compile Include="Commands\CommandManager.cs" />
     <Compile Include="Commands\CommandBase.cs" />
+    <Compile Include="Commands\FairingCommand.cs" />
     <Compile Include="Contracts\Commands\Command.cs" />
+    <Compile Include="Contracts\Commands\Fairing.cs" />
     <Compile Include="Contracts\Commands\Ignition.cs" />
     <Compile Include="Contracts\Commands\Orient.cs" />
     <Compile Include="Contracts\Commands\Shutdown.cs" />
@@ -132,6 +134,7 @@
     <Compile Include="Spacecrafts\DragonTrunk.cs" />
     <Compile Include="Spacecrafts\Falcon9SSTO\F9SSTO.cs" />
     <Compile Include="Spacecrafts\Falcon9\F9S1.cs" />
+    <Compile Include="Spacecrafts\Falcon9\F9S2.cs" />
     <Compile Include="Spacecrafts\FalconHeavy\FHS1.cs" />
     <Compile Include="Spacecrafts\FalconHeavy\FHS2.cs" />
     <Compile Include="Spacecrafts\FalconHeavy\FHBooster.cs" />
