--- a/src/SpaceSim/SpaceSim.csproj
+++ b/src/SpaceSim/SpaceSim.csproj
@@ -66,10 +66,12 @@
     <Compile Include="Commands\CommandManager.cs" />
     <Compile Include="Commands\CommandBase.cs" />
     <Compile Include="Commands\FairingCommand.cs" />
+    <Compile Include="Commands\RetrogradeCommand.cs" />
     <Compile Include="Contracts\Commands\Command.cs" />
     <Compile Include="Contracts\Commands\Fairing.cs" />
     <Compile Include="Contracts\Commands\Ignition.cs" />
     <Compile Include="Contracts\Commands\Orient.cs" />
+    <Compile Include="Contracts\Commands\Retrograde.cs" />
     <Compile Include="Contracts\Commands\Shutdown.cs" />
     <Compile Include="Contracts\Commands\Stage.cs" />
     <Compile Include="Contracts\Commands\Throttle.cs" />
@@ -130,8 +132,10 @@
     <Compile Include="SolarSystem\Planets\Saturn.cs" />
     <Compile Include="SolarSystem\Planets\Venus.cs" />
     <Compile Include="Spacecrafts\DemoSat.cs" />
-    <Compile Include="Spacecrafts\Dragon.cs" />
-    <Compile Include="Spacecrafts\DragonTrunk.cs" />
+    <Compile Include="Spacecrafts\DragonV1\Dragon.cs" />
+    <Compile Include="Spacecrafts\DragonV1\DragonTrunk.cs" />
+    <Compile Include="Spacecrafts\DragonV2\DragonV2.cs" />
+    <Compile Include="Spacecrafts\DragonV2\DragonV2Trunk.cs" />
     <Compile Include="Spacecrafts\Falcon9SSTO\F9SSTO.cs" />
     <Compile Include="Spacecrafts\Falcon9\F9S1.cs" />
     <Compile Include="Spacecrafts\Falcon9\F9S2.cs" />
@@ -204,7 +208,13 @@
     <Content Include="Textures\asds.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Textures\dragon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Textures\dragonTrunk.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Textures\dragonTrunkV2.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Textures\dragonV2.png">
