Adding NASA JPL ephemeris data for accurate planet positions Fixing auto landing algorithm Updating Red Dragon FH launch profile Updating FH textures for recovery

--- a/src/SpaceSim/SpaceSim.csproj
+++ b/src/SpaceSim/SpaceSim.csproj
@@ -96,15 +96,15 @@
     <Compile Include="Controllers\CommandController.cs" />
     <Compile Include="Controllers\IController.cs" />
     <Compile Include="Controllers\SimpleFlightController.cs" />
-    <Compile Include="Drawing\EngineFlame.cs" />
+    <Compile Include="Particles\EngineFlame.cs" />
     <Compile Include="Drawing\EventManager.cs" />
     <Compile Include="Drawing\GpuClear.cs" />
     <Compile Include="Drawing\IGdiRenderable.cs" />
     <Compile Include="Drawing\IGpuRenderable.cs" />
     <Compile Include="Drawing\IMapRenderable.cs" />
     <Compile Include="Drawing\LaunchTrail.cs" />
-    <Compile Include="Drawing\Particle.cs" />
-    <Compile Include="Drawing\ReEntryFlame.cs" />
+    <Compile Include="Particles\Particle.cs" />
+    <Compile Include="Particles\ReEntryFlame.cs" />
     <Compile Include="Drawing\RenderUtils.cs" />
     <Compile Include="Engines\EngineBase.cs" />
     <Compile Include="Engines\IEngine.cs" />
