Adding a sprite sheet for the ITS ship to support rolling

--- a/src/SpaceSim/SpaceSim.csproj
+++ b/src/SpaceSim/SpaceSim.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Controllers\CommandController.cs" />
     <Compile Include="Controllers\IController.cs" />
     <Compile Include="Controllers\SimpleFlightController.cs" />
+    <Compile Include="Drawing\SpriteSheet.cs" />
     <Compile Include="Engines\Raptor.cs" />
     <Compile Include="Engines\RaptorVac.cs" />
     <Compile Include="Particles\EngineFlame.cs" />
