--- a/src/SpaceSim/SpaceSim.csproj
+++ b/src/SpaceSim/SpaceSim.csproj
@@ -97,7 +97,8 @@
     <Compile Include="Controllers\IController.cs" />
     <Compile Include="Controllers\SimpleFlightController.cs" />
     <Compile Include="Drawing\SpriteSheet.cs" />
-    <Compile Include="Engines\Raptor.cs" />
+    <Compile Include="Engines\Raptor40.cs" />
+    <Compile Include="Engines\Raptor50.cs" />
     <Compile Include="Engines\RaptorVac.cs" />
     <Compile Include="Particles\EngineFlame.cs" />
     <Compile Include="Drawing\EventManager.cs" />
