--- a/src/SpaceSim/app.config
+++ b/src/SpaceSim/app.config
@@ -1,3 +1,22 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="SpaceSim.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+</configSections>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+    <applicationSettings>
+        <SpaceSim.Properties.Settings>
+            <setting name="WriteBitmaps" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="UseTheTurnForce" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="WriteCsv" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </SpaceSim.Properties.Settings>
+    </applicationSettings>
+</configuration>
