Adding new smoke particle effect for re-entry Fixing a few bugs related to orbit traces in the proxy classes Updating falcon 9 to v1.2 Adding Iridium-1 profile

--- a/src/SpaceSim/SpaceSim.csproj
+++ b/src/SpaceSim/SpaceSim.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Drawing\IMapRenderable.cs" />
     <Compile Include="Drawing\LaunchTrail.cs" />
     <Compile Include="Particles\Particle.cs" />
+    <Compile Include="Particles\ParticleSystem.cs" />
     <Compile Include="Particles\ReEntryFlame.cs" />
     <Compile Include="Drawing\RenderUtils.cs" />
     <Compile Include="Engines\EngineBase.cs" />
@@ -135,6 +136,7 @@
     <Compile Include="Engines\Merlin1D.cs" />
     <Compile Include="Engines\Merlin1DVac.cs" />
     <Compile Include="Engines\SuperDraco.cs" />
+    <Compile Include="Particles\Smoke.cs" />
     <Compile Include="Physics\Constants.cs" />
     <Compile Include="Drawing\FpsManager.cs" />
     <Compile Include="Gauges\RetrogradeButton.cs" />
