Adding a class to handle drawing UI text Fixing a bug in timesteps where 100x was really 64x Reducing the accuracy of higher timesteps to ensure they run well

--- a/src/SpaceSim/SpaceSim.csproj
+++ b/src/SpaceSim/SpaceSim.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Controllers\IController.cs" />
     <Compile Include="Controllers\SimpleFlightController.cs" />
     <Compile Include="Drawing\SpriteSheet.cs" />
+    <Compile Include="Drawing\TextDisplay.cs" />
     <Compile Include="Engines\Raptor40.cs" />
     <Compile Include="Engines\Raptor50.cs" />
     <Compile Include="Engines\RaptorVac.cs" />
