--- a/src/SpaceSim/Properties/Settings.settings
+++ b/src/SpaceSim/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="UseTheTurnForce" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="WriteCsv" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
