--- a/src/SpaceSim/app.config
+++ b/src/SpaceSim/app.config
@@ -12,7 +12,7 @@
                 <value>False</value>
             </setting>
             <setting name="UseTheTurnForce" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="WriteCsv" serializeAs="String">
                 <value>False</value>
