--- a/src/SpaceSim/SpaceSim.csproj
+++ b/src/SpaceSim/SpaceSim.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Commands\PostCommand.cs" />
     <Compile Include="Commands\ProgradeCommand.cs" />
     <Compile Include="Commands\RelativePitchCommand.cs" />
+    <Compile Include="Commands\ReleaseCommand.cs" />
     <Compile Include="Commands\RetrogradeCommand.cs" />
     <Compile Include="Commands\RollCommand.cs" />
     <Compile Include="Commands\YawCommand.cs" />
@@ -102,6 +103,7 @@
     <Compile Include="Contracts\Commands\Post.cs" />
     <Compile Include="Contracts\Commands\Prograde.cs" />
     <Compile Include="Contracts\Commands\RelativePitch.cs" />
+    <Compile Include="Contracts\Commands\Release.cs" />
     <Compile Include="Contracts\Commands\Retrograde.cs" />
     <Compile Include="Contracts\Commands\Roll.cs" />
     <Compile Include="Contracts\Commands\Shutdown.cs" />
