--- a/src/SpaceSim/app.config
+++ b/src/SpaceSim/app.config
@@ -23,6 +23,9 @@
             <setting name="FullScreen" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ScreenSize" serializeAs="String">
+                <value>1600, 900</value>
+            </setting>
         </SpaceSim.Properties.Settings>
     </applicationSettings>
 </configuration>
