--- a/src/SpaceSim/Properties/Settings.settings
+++ b/src/SpaceSim/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="FullScreen" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ScreenSize" Type="System.Drawing.Size" Scope="Application">
+      <Value Profile="(Default)">1600, 900</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
