Fine tuned core and S2 burns. Added Rate, Target and Zoom commands. Added samples in Roadster.xml

--- a/src/SpaceSim/SpaceSim.csproj
+++ b/src/SpaceSim/SpaceSim.csproj
@@ -89,11 +89,14 @@
     <Compile Include="Commands\PitchCommand.cs" />
     <Compile Include="Commands\PostCommand.cs" />
     <Compile Include="Commands\ProgradeCommand.cs" />
+    <Compile Include="Commands\RateCommand.cs" />
     <Compile Include="Commands\RelativePitchCommand.cs" />
     <Compile Include="Commands\ReleaseCommand.cs" />
     <Compile Include="Commands\RetrogradeCommand.cs" />
     <Compile Include="Commands\RollCommand.cs" />
+    <Compile Include="Commands\TargetCommand.cs" />
     <Compile Include="Commands\YawCommand.cs" />
+    <Compile Include="Commands\ZoomCommand.cs" />
     <Compile Include="Contracts\Commands\AutoLand.cs" />
     <Compile Include="Contracts\Commands\Cant.cs" />
     <Compile Include="Contracts\Commands\Command.cs" />
@@ -102,18 +105,21 @@
     <Compile Include="Contracts\Commands\Pitch.cs" />
     <Compile Include="Contracts\Commands\Post.cs" />
     <Compile Include="Contracts\Commands\Prograde.cs" />
+    <Compile Include="Contracts\Commands\Rate.cs" />
     <Compile Include="Contracts\Commands\RelativePitch.cs" />
     <Compile Include="Contracts\Commands\Release.cs" />
     <Compile Include="Contracts\Commands\Retrograde.cs" />
     <Compile Include="Contracts\Commands\Roll.cs" />
     <Compile Include="Contracts\Commands\Shutdown.cs" />
     <Compile Include="Contracts\Commands\Stage.cs" />
+    <Compile Include="Contracts\Commands\Target.cs" />
     <Compile Include="Contracts\Commands\Throttle.cs" />
     <Compile Include="Commands\IgnitionCommand.cs" />
     <Compile Include="Commands\ShutdownCommand.cs" />
     <Compile Include="Commands\StageCommand.cs" />
     <Compile Include="Commands\ThrottleCommand.cs" />
     <Compile Include="Contracts\Commands\Yaw.cs" />
+    <Compile Include="Contracts\Commands\Zoom.cs" />
     <Compile Include="Contracts\MissionConfig.cs" />
     <Compile Include="Contracts\StructureConfig.cs" />
     <Compile Include="Controllers\CommandController.cs" />
